<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.fh.mae.japamiro.ProfilActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonInfo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonInfo"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        android:drawableEnd="@drawable/ic_info_black_24dp"
        android:drawableRight="@drawable/ic_info_black_24dp"
        android:onClick="zeigeInfos"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewKriterien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/kriterien"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <CheckBox
        android:id="@+id/checkBoxRichtung"
        style="@style/AppTheme.ProfilTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:onClick="updateSubmitButton"
        android:text="@string/windrichtung"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewKriterien" />

    <CheckBox
        android:id="@+id/checkBoxMinWind"
        style="@style/AppTheme.ProfilTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="updateSubmitButton"
        android:text="@string/min_windgeschwindigkeit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRichtung" />

    <CheckBox
        android:id="@+id/checkBoxZeitraum"
        style="@style/AppTheme.ProfilTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="updateSubmitButton"
        android:text="@string/zeitraum"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMinWind" />

    <CheckBox
        android:id="@+id/checkBoxMinTemp"
        style="@style/AppTheme.ProfilTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="updateSubmitButton"
        android:text="@string/min_temperatur"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxZeitraum" />

    <CheckBox
        android:id="@+id/checkBoxAkku"
        style="@style/AppTheme.ProfilTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="updateSubmitButton"
        android:text="@string/warnung_bei_verbl_akkudauer_von"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMinTemp" />

    <Spinner
        android:id="@+id/spinnerRichtung"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/checkBoxRichtung"
        app:layout_constraintTop_toBottomOf="@+id/textViewKriterien" />

    <TextView
        android:id="@+id/textViewStation"
        style="@style/AppTheme.ProfilTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/station_w_hlen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAkku" />

    <Spinner
        android:id="@+id/spinnerStation"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStation" />


    <EditText
        android:id="@+id/editTextAkku"
        style="@style/AppTheme.ProfilTextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/checkBoxAkku"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMinTemp" />

    <EditText
        android:id="@+id/editTextZeitraum"
        style="@style/AppTheme.ProfilTextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxZeitraum"
        app:layout_constraintLeft_toRightOf="@+id/checkBoxZeitraum"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMinWind" />

    <EditText
        android:id="@+id/editTextMinWind"
        style="@style/AppTheme.ProfilTextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/checkBoxMinWind"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRichtung" />

    <TextView
        android:id="@+id/textViewZeitraum"
        style="@style/AppTheme.ProfilTextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Zeitraum"
        app:layout_constraintBottom_toBottomOf="@+id/editTextZeitraum"
        app:layout_constraintLeft_toRightOf="@+id/editTextZeitraum"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMinWind" />

    <TextView
        android:id="@+id/textView3"
        style="@style/AppTheme.ProfilTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="bft"
        app:layout_constraintBottom_toBottomOf="@+id/editTextMinWind"
        app:layout_constraintLeft_toRightOf="@+id/editTextMinWind"
        app:layout_constraintTop_toTopOf="@+id/editTextMinWind" />

    <TextView
        android:id="@+id/textViewAkku"
        style="@style/AppTheme.ProfilTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/einheitAkkudauer"
        app:layout_constraintBottom_toBottomOf="@+id/editTextAkku"
        app:layout_constraintLeft_toRightOf="@+id/editTextAkku"
        app:layout_constraintTop_toTopOf="@+id/editTextAkku" />

    <Button
        android:id="@+id/buttonProfilAnlegen"
        android:onClick="pressButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fertig"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerStation" />

    <EditText
        android:id="@+id/editTextMinTemp"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxMinTemp"
        app:layout_constraintLeft_toRightOf="@+id/checkBoxMinTemp"
        app:layout_constraintTop_toTopOf="@+id/checkBoxMinTemp" />

    <TextView
        android:id="@+id/textViewMinTemp"
        style="@style/AppTheme.ProfilTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="8dp"
        android:text="@string/minTemp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextMinTemp"
        app:layout_constraintLeft_toRightOf="@+id/editTextMinTemp"
        app:layout_constraintTop_toTopOf="@+id/editTextMinTemp"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
